--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set variable
+        id: set_archive_url
         uses: ./.github/actions/test-job
 
       # Step 0: echo
       - name: echo
-        run: echo ${{ needs.test-job.outputs.test_url }}
+        run: echo ${{ steps.set_archive_url.outputs.test_url }}
 
       # Step 2: Generate a unique version tag
       - name: Generate version tag
