testing variable sending back and forth

--- a/.github/actions/test-job/action.yml
+++ b/.github/actions/test-job/action.yml
@@ -1,7 +1,8 @@
 name: Test Job
 
 outputs:
-  test_url: ${{ steps.set.outputs.test }}
+  test_url:
+    value: ${{ steps.set.outputs.test }}
 
 runs:
   using: 'composite'
