--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,11 @@ jobs:
         run: |
           aws s3 cp $GITHUB_WORKSPACE/temp_dir/repo_archive_${{ env.VERSION_TAG }}.tar.gz s3://ug-webapp-deployment-history/repo_archive_${{ env.VERSION_TAG }}.tar.gz
 
+      - name: Print Variable
+        shell: bash
+        run: | 
+          echo ${{ steps.set_archive_url.outputs.TEST_URL }}
+
   echo-var:
     runs-on: ubuntu-latest
     needs: [zip-and-upload]
@@ -55,4 +60,4 @@ jobs:
     steps:
       - name: echo send-to-s3.outputs.archive_url
         shell: bash
-        run: echo ${{ needs.zip-and-upload.outputs.archive_url }}
+        run: echo ${{ needs.zip-and-upload.outputs.test_url }}
