--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,10 @@ jobs:
   zip-and-upload:
     runs-on: ubuntu-latest
 
+    outputs:
+      test_url:
+        value: ${{ steps.set_archive_url.outputs.test }}
+
     steps:
       # Step 1: Check out the code from the repo
       - name: Checkout repository
@@ -60,4 +64,4 @@ jobs:
     steps:
       - name: echo send-to-s3.outputs.test_url
         shell: bash
-        run: echo ${{ needs.zip-and-upload.set_archive_url.outputs.TEST_URL }}
+        run: echo ${{ needs.zip-and-upload.outputs.TEST_URL }}
